过期的语法修正